--- a/06-Jenkins-with-Ansible/02-Ansible-Playbook/play.yml
+++ b/06-Jenkins-with-Ansible/02-Ansible-Playbook/play.yml
@@ -1,4 +1,4 @@
 - hosts: test1
+  name: "Jenkins & Ansible Test Play"
   tasks:
-   - debug:
-       msg: "{{ MSG }}"
+  - shell: echo "Welcome to the world of Ansible" > /tmp/ansible-file
